Minor tweaks...